alter sequencie dependecies

--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "body-parser": "^1.20.3",
-        "connect-flash": "^0.1.1",
         "express": "^4.21.1",
         "express-handlebars": "^8.0.1",
+        "body-parser": "^1.20.3",
+        "connect-flash": "^0.1.1",
         "express-session": "^1.18.1",
+        "sequelize": "^6.37.4",
         "mysql2": "^3.11.3",
-        "pg": "^8.13.1",
-        "sequelize": "^6.37.4"
+        "pg": "^8.13.1"
     }
 }
