--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "express": "^4.21.1",
-        "express-handlebars": "^8.0.1",
+        "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.3",
         "connect-flash": "^0.1.1",
+        "express": "^4.21.1",
+        "express-handlebars": "^8.0.1",
         "express-session": "^1.18.1",
-        "sequelize": "^6.37.4",
         "mysql2": "^3.11.3",
-        "pg": "^8.13.1"
+        "passport": "^0.7.0",
+        "passport-local": "^1.0.0",
+        "pg": "^8.13.1",
+        "sequelize": "^6.37.4"
     }
 }
