--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.3",
         "connect-flash": "^0.1.1",
+        "cookie-parser": "^1.4.7",
         "express": "^4.21.1",
         "express-handlebars": "^8.0.1",
         "express-session": "^1.18.1",
